--- a/webapp.client/package.json
+++ b/webapp.client/package.json
@@ -21,8 +21,7 @@
     "@angular/platform-browser": "^19.1.0",
     "@angular/platform-browser-dynamic": "^19.1.0",
     "@angular/router": "^19.1.0",
-    "bootstrap": "^5.3.3",
-    "bootstrap-icons": "^1.11.3",
+    "bootstrap-italia": "^2.14.0",
     "jest-editor-support": "*",
     "jwt-decode": "^4.0.0",
     "run-script-os": "*",
